# Templates

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
.trae/documents/: python-backend-template-library-requirements.md
.vercel/: project.json
docs/: api.md  auth.md  cache.md  database.md  deployment.md  enterprise-features.md  monitoring.md
docs/best-practices/: performance.md  project-structure.md  security.md  testing.md
examples/: README.md  enterprise_example.py
examples/chatgpt-backend/: .env.example  API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  quick-start.sh  requirements.txt
examples/chatgpt-backend/app/: main.py
examples/chatgpt-backend/app/api/v1/: auth.py  conversations.py  messages.py  users.py  websocket.py
examples/chatgpt-backend/app/core/: __init__.py  cache.py  config.py  database.py  openai_client.py  security.py
examples/chatgpt-backend/app/exceptions/: __init__.py  custom_exceptions.py  handlers.py
examples/chatgpt-backend/app/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  request_logging.py
examples/chatgpt-backend/app/models/: conversation.py  message.py  usage.py  user.py
examples/chatgpt-backend/app/services/: conversation_service.py  message_service.py  usage_service.py  user_service.py
examples/chatgpt-backend/scripts/: init_db.py  start.py
examples/ecommerce-api/: .env.example  README.md  main.py
examples/ecommerce-api/app/api/: products.py
examples/microservice-demo/: README.md  docker-compose.yml  main.py  requirements.txt
examples/microservice-demo/k8s/: README.md  api-gateway.yaml  database.yaml  deploy.sh  monitoring.yaml  namespace.yaml
examples/realtime-chat/: README.md  main.py  requirements.txt
examples/realtime-chat/app/api/: websocket.py
examples/user-management/: .env.example  README.md  main.py  requirements.txt
examples/user-management/app/api/: auth.py
k8s/: app-deployment.yaml  configmaps.yaml  database.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  redis.yaml  secrets.yaml
src/ai/: ml_models.py
src/analytics/: data_analytics.py
src/api/: __init__.py  dependencies.py  exception_handlers.py  middleware.py
src/api/v1/: __init__.py  admin.py  auth.py  health.py  users.py
src/automation/: workflow.py
src/blockchain/: web3_integration.py
src/cloud/: container_orchestration.py
src/core/: cache.py  config.py  database.py  dependencies.py  enterprise_integration.py  exceptions.py  high_availability.py  logging.py  middleware.py  observability.py  responses.py  security.py
src/gaming/: game_development.py
src/integrations/: api_integrations.py
src/microservices/: service_mesh.py
src/mobile/: mobile_development.py
src/models/: __init__.py  auth.py  base.py  user.py
src/performance/: optimization.py
src/security/: advanced_security.py
src/services/: __init__.py  admin.py  auth.py  base.py  file.py  notification.py  system.py  user.py
src/utils/: __init__.py  advanced_tools.py  decorators.py  exceptions.py  helpers.py  logger.py  pagination.py  response.py  security.py  validators.py
templates/: __init__.py  cli.py
templates/api/: __init__.py  fastapi_template.py
templates/auth/: __init__.py  jwt_auth.py
templates/data_governance/: __init__.py  data_quality.py
templates/database/: __init__.py  connection_pool.py  migration_template.py  sqlalchemy_template.py
templates/deployment/: __init__.py  cicd_template.py  config_template.py  docker_template.py  kubernetes_template.py  server_template.py
templates/enterprise_integration/: __init__.py  api_gateway.py
templates/high_availability/: __init__.py  failover.py  load_balancer.py
templates/observability/: __init__.py  alerting.py  metrics.py  tracing.py
templates/performance/: __init__.py  connection_pool.py
templates/security/: __init__.py  api_key_manager.py  rbac.py
